--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.7",
+    "d3-format": "^3.1.0",
+    "d3-time": "^3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-financial-charts": "^2.0.1",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
