--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ag-charts-enterprise": "^11.0.4",
+    "ag-charts-react": "^11.0.4",
     "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.7",
+    "d3": "^7.9.0",
     "d3-format": "^3.1.0",
     "d3-time": "^3.1.0",
+    "dayjs": "^1.11.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-financial-charts": "^2.0.1",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
+    "react-stockcharts": "^0.7.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -44,6 +49,7 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ]
+    ],
+    "proxy": "http://127.0.0.1:8000"
   }
 }
